# mobile-patient-backend

./: .env  README.md  WHISPER_API_FORMAT.md  app_simple.py  app_simple_backup.py  app_simple_clean.py  nutrition_backend.py  nutrition_backend_new.py  patient_login.py  requirements.txt  start_both_backends.bat  start_integrated_backend.bat  start_nutrition_backend.bat  symptoms_service.py  test_cors_fix.py  test_db_connection.py  test_jwt_signup.py  test_n8n_food_webhook.py  test_n8n_webhook_formats.py  test_prescription.txt  test_vital_signs_db.py  vital_ocr_service.py  vital_signs_ocr_service.py  vital_signs_service.py  webhook_configs.json
Pregnancy_AI_Flutter_Frontend/: .flutter-plugins-dependencies
Pregnancy_AI_Flutter_Frontend/.dart_tool/: package_config.json  package_config_subset  package_graph.json
Pregnancy_AI_Flutter_Frontend/.dart_tool/dartpad/: web_plugin_registrant.dart
Pregnancy_AI_Flutter_Frontend/android/: local.properties
Pregnancy_AI_Flutter_Frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
Pregnancy_AI_Flutter_Frontend/ios/Runner/: GeneratedPluginRegistrant.m
flutter_patient_app/lib/: main.dart
flutter_patient_app/lib/config/: n8n_config.dart
flutter_patient_app/lib/providers/: auth_provider.dart  user_provider.dart
flutter_patient_app/lib/screens/: detailed_food_entry_screen.dart  edit_profile_screen.dart  forgot_password_screen.dart  home_screen.dart  login_screen.dart  medication_dosage_list_screen.dart  mental_health_screen.dart  otp_verification_screen.dart  patient_daily_log_screen.dart  patient_daily_tracking_details_screen.dart  patient_food_tracking_screen.dart  patient_kick_counter_screen.dart  patient_medication_tracking_screen.dart  patient_profile_screen.dart  patient_sleep_log_screen.dart  patient_symptoms_tracking_screen.dart  patient_vital_signs_screen.dart  profile_completion_screen.dart  (+4 more)
medical_lab/: .flutter-plugins-dependencies
medical_lab/.dart_tool/: package_config.json  package_config_subset  package_graph.json
medication/: webhook_configs.json
vital_sign/: .env  README.md  SETUP_GUIDE.md  pubspec.yaml  start_all.bat  start_backend.bat  start_frontend.bat
vital_sign/fastapi_server/: .env  README.md  ai_service.py  check_patient_collection.py  config.py  database.py  main.py  models.py  requirements.txt  test_flutter_connection.py  test_vital_sign_creation.py
vital_sign/lib/: main.dart
vital_sign/test/: widget_test.dart
vital_sign/web/: index.html  manifest.json
vitalsign_ocr/: MANIFEST.in  README_MODULE.md  WORKSPACE_OVERVIEW.md  __init__.py  __main__.py  chrome_upload_webhook.html  debug_webhook_issue.py  pyproject.toml  requirements.txt  setup.py  test_complete_fixed_flow.py  test_complete_flow.py  test_fixed_ocr.py  test_paddleocr_direct.py  test_pdf_ocr.py  test_webhook_payload.py  webhook_configs.json
vitalsign_ocr/app/: __init__.py  config.py  main.py  webhook_configs.json
vitalsign_ocr/app/api/: endpoints.py
vitalsign_ocr/app/models/: schemas.py  webhook_config.py
vitalsign_ocr/app/services/: enhanced_ocr_service.py  webhook_config_service.py  webhook_service.py
vitalsign_ocr/docs/: CONSOLIDATION_SUMMARY.md  README_POSTMAN.md
vitalsign_ocr/examples/: Medication_OCR_API.postman_collection.json  ocr_flow_test.html  test.html
vitalsign_ocr/scripts/: install.bat  install.py  install.sh
vitalsign_ocr/tests/: __init__.py  conftest.py  test_main.py
(+26 files in other folders)
